--- a/README
+++ b/README
@@ -6,6 +6,7 @@ ITエンジニアの職種別適性診断アプリ
 利用者が30万人を超えた人気の某自己分析ツールの開発者（実名非公開）監修のもと、IT職種別の適性診断を行う。
 心理学や脳科学の知見もまじえて、履歴書や職務経歴書からは読み取れないユーザーの才能を発掘していく。
 
+
 - 動作環境 - 
 Windows
 
@@ -39,6 +40,7 @@ Webブラウザから使用。URLは未定
 - バグや要望の報告方法 - 
 報告手段や連絡ルートについて検討中。
 
+
 - 開発のゴール
 Webアプリ上でユーザーが会員登録し、マイページを見れること
 適性診断ページの閲覧と診断ができること
@@ -47,6 +49,7 @@ IT転職に必要な職務経歴書やスキルシート、ポートフォリオ
 診断履歴の確認ページ
 その他IT業界関連記事の共有ページ作成
 お問い合わせフォームの作成
+
 
 - 顧客情報 - 
 プライバシーポリシーの都合により、非公開
@@ -60,7 +63,7 @@ PM：1名
 PL:1名
 
 
-- 開発に必要な技術 - 
+- 開発環境・技術 - 
 バックエンド：Ruby(RubyonRails)
 フロント：Vue.js(Nuxt.js)
 インフラ：AWS
@@ -68,15 +71,13 @@ PL:1名
 テスト：Rspec
 OS：MacOS,WindowsOSどちらも可
 
-開発に利用するOS・統合開発環境・ライブラリ・フレームワーク・クラウドなどを書きます。新しく参加した開発メンバーのために用意しなければならない有償製品へのライセンスやクラウドアカウントの用意を忘れることがなくなるでしょう。
-- 開発環境の構築方法と実行方法 - 新しく参加した開発メンバーが、助けなしに開発環境を構築し、アプリケーションの開発に入れるようにします。
-
 
 - デバッグ方法や自動テストの方法など、最低限知ってほしいもの
 デバッグ：以下のような方法を検討中。
 better_errors,byebug,pry-byebug
 
 テスト：Rspecの経験あれば尚可
+
 
 - 仕様書・設計書・コーディング規約・アーキテクチャ図などのドキュメントへのリンク
 （要件定義内容）
